# fix-allocation-transformer

./: LICENSE  README.md  pyproject.toml
docs/: MAPPING.md
src/fix_alloc/: cli.py  csv_writer.py  model.py  parser.py  parties.py  tags.py  target_schema.py  transform.py
tests/: test_csv_writer.py  test_model.py  test_parser.py  test_parties.py  test_transform.py
